add Hots、Engine、Connector、Service、Server等服务组件注释